--- a/scss/index.scss
+++ b/scss/index.scss
@@ -87,8 +87,8 @@ a {
         }
 
         h3 {
-            -ms-word-break: break-all;
-            word-break: break-all;
+            -ms-word-break: break-word;
+            word-break: break-word;
             -webkit-hyphens: auto;
             -moz-hyphens: auto;
             hyphens: auto;
